# Thesis

./: .gitignore  README.md  Thesis.ipynb  analyze_calls.py  cell_content.txt  check_dataset_progress.ps1  debug_factor_analysis.py  debug_setter.py  environment.yml  numerical_simulation.ipynb  optimization_log.md  output.txt  pyproject.toml  read_cell.py  reproduce_flux.py  requirements-dev.txt  requirements.txt  run_experiments.ps1  test_analytical_fix.py  test_instant_distrib.py  test_numba.py  tests.ipynb  timeit.ipynb  transfer_functions.ipynb  update_notebook.py  verification.txt  verify_fix.py
.github/: copilot-instructions.md  web-app-guidelines.md
.github/agent-logs/: 2025.01.08-01_mmi-integration.md  2025.01.12-01_doc-restructure-uml.md  2025.11.26-01_analytical-transmission-maps.md  2025.11.26-01_notebooks-enrichissement.md  2025.12.06-01_neural-calibration.md  (+12 more)
analysis/: NOTEBOOKS_GUIDE.md  README.md  calibration.ipynb  data_representations.ipynb  demonstration.ipynb  distrib_test_statistics.ipynb  distribution_model.ipynb  manual_control.ipynb  neural_calibration.ipynb  noise_sensitivity.ipynb  projected_telescopes.ipynb  sky_contribution.ipynb  temporal_response.ipynb  transmission_maps.ipynb  wavelength_scan.ipynb
src/: baseline_verification.py
tests/: test_context.py  test_modules_coordinates.py  verify_analysis.py  verify_refactor.py
tmp/: test_abcd_plots.py  test_calibration_abcd.py  test_calibration_direct.py  test_calibration_final.py  test_calibration_refactor.py
web/: Home.py  __init__.py  main.py  requirements.txt  run.py
(+130 files in other folders)
